# haskell-webapps

./: .gitignore
UI/React-Flux/: Annotations.md
UI/React-Flux/backend/: Main.hs  backend.cabal  stack.yaml
UI/React-Flux/common/: common.cabal  stack.yaml
UI/React-Flux/common/src/Common/: API.hs  Permission.hs  Prelude.hs  RoleAttributes.hs  Roles.hs  Shaped.hs  User.hs  UserLogin.hs
UI/React-Flux/frontend/: Makefile  frontend.cabal  frontend.html  stack-ghcjs.yaml  stack.yaml
UI/React-Flux/frontend/app/: Main.hs  NavStore.hs  Router.hs  TabbedApps.hs  TabbedApps2.hs  Types.hs
UI/React-Flux/frontend/app/Frontend/Auth/: App.hs  Components.hs  Store.hs
UI/React-Flux/frontend/app/Frontend/EditRole/: App.hs  Store.hs
UI/React-Flux/frontend/app/Frontend/Roles/: App.hs  Store.hs
UI/React-Flux/frontend/js-build/: frontend.js  frontend.min.js  install-root
UI/React-Flux/todo/: Makefile  TodoComponents.hs  stack-ghcjs.yaml  stack.yaml  todo.cabal  todo.html
UI/ReflexFRP/mockLoginPage/: stack.yaml
UI/ReflexFRP/mockLoginPage/mockAPI/: mockAPI.cabal  stack.yaml
UI/ReflexFRP/mockLoginPage/mockAPI/src/: MockAPI.hs
UI/ReflexFRP/mockLoginPage/mockClient/: Main.hs  deploy.sh  mockLoginPage.cabal  stack-ghcjs.yaml  stack.yaml
UI/ReflexFRP/mockLoginPage/mockClient/js/: all.min.js
UI/ReflexFRP/mockLoginPage/mockServer/: Main.hs  mockServer.cabal  stack.yaml
UI/ReflexFRP/starterApp/: stack.yaml
doc/docs/reflex/: multi-page-routing.rst  outline.rst  reflex.rst
