name:                backend
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable backend
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , common
                     , servant-server
                     , text
                     , warp
                     , wai-extra
                     , classy-prelude
                     , lens
  default-language:    Haskell2010