name:                common
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common.API
                     , Common.Permission
                     , Common.Prelude
                     , Common.RoleAttributes
                     , Common.Roles
                     , Common.Shaped
                     , Common.User
                     , Common.UserLogin
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , text
                     , aeson
                     , lens
                     , containers
                     , deepseq
                     , email-validate
                     , string-conversions
  default-language:    Haskell2010
  ghc-options:       -Wall