name:                frontend
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Frontend.Auth.Store
                     , Frontend.Auth.Components
                     , Frontend.Auth.App
                     , Frontend.Roles.App
                     , Frontend.Roles.Store
                     , Router
                     , TabbedApps
                     , Types
  build-depends:       base >=4.9 && <4.10
                     , react-flux
                     , react-flux-servant
                     , text
                     , deepseq
                     , jsaddle >= 0.6
                     , common
                     , classy-prelude
                     , aeson
                     , web-routes
                     , bytestring
                     , lens
  default-language:  Haskell2010


  if impl(ghcjs)
    build-depends:  ghcjs-base
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER
  else
    ghc-options: -Wall
