name:                todo
version:             0.1.0.0
license:             BSD3
maintainer:          meditans@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable todo
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       TodoViews 
                     , TodoDispatcher
                     , TodoStore
                     , TodoComponents

  build-depends:       base >=4.9 && <4.10
                     , react-flux
                     , text
                     , deepseq
  default-language:  Haskell2010


  if impl(ghcjs)
    build-depends:  ghcjs-base
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER
  else
    ghc-options: -Wall